--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -23,6 +23,7 @@
   .loginButton {
     padding: 10px 20px;
     border-radius: 8px;
+    margin-bottom: 10px;
     border: none;
     background-color: #007bff; 
     color: white; 
