--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 50%;
     height: 100vh;
     text-align: center;
+    margin: 0 auto;
   }
   
   .App-header {
